corrected overflow in gallery page

--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -84,6 +84,8 @@ body {
     justify-content: space-between;
     padding: 0 5%;
     margin: 0;
+    overflow: auto;
+    white-space: nowrap;
     margin-bottom: 100px;
 }
 
